lab1/Test/L1-A-13-90.output
Error Type A at Line 5
Error Type B at Line 12
Error Type A at Line 15
Error Type A at Line 20
Error Type B at Line 23
Error Type B at Line 26
Error Type A at Line 34
Error Type B at Line 37
Error Type A at Line 40
Error Type B at Line 40
