lab1/Test/L1-A-13-90.cmm
struct aRZb2JyKkbRa3Z Ygej 
;
float ;
int pX9pqju1jF ( int BHFd7uHo8dE_HFzK , int ol [ 235101131 
  ] #) {
  Vv_zQTrxPMeKVGL || MHmHp5DL && iridmwy8y6zmrT2Ud 
    < hr0O2OXSR_4gw + ( kQpgjPX = rTIm4NW >= imji0Z45HjWrrpy 
    - rbQSeErSaIxTl60J * C ( dG2a8Y || eX8E9otwWvsQ && 
    Q4uyzR4aIMnEnbM > iHMdXVtn_yYOLIplwgG [ MDBFvkuVE 
    && XBbgDJLz <= Lnt8e + UTtygdaHi_PPK1V20d ( Kngtav_4pkvpURnd6p 
    , mljDEds || ! ! - Pl2 ( ZiYgRmXVHkE == _T6YlPgptmE 
    != ! ) - - 323956755.300227505 . rNfrSRMact ) * 2055466315 
    ] ) / ! - - T1wOSmXBJ ( ) ) . Pajy04NMQWkzQT9C_R ;
}
int cYklrzfPd %, kk 

;
int ;
int ;
'int A9_oeVEvEb ( ) {
  IVJ5yznJs6WF3Ako8ZpL ;
  if ( viRRbW1jgwPr )   tg7DOXl1 
else   if ( WZmFs8 ) {
    qjTQ ;
    WLgyYgkmuBo7Bexrc ;
    while ( WSmKQjGKsDGTomVd )     if VeL0qu18c ) 
          DcWx5yA7Myup9lMPbZru ;
else     return G896TRtqLK ;


  }

}
struct vfIEtuM7udIn ^{
  struct yt cSLiw ;
  struct {
    int , H5DRKzLtghBg = _NMg6UG3_Aah9 ;
  }FqhEadEqzl23s ;
};
:while 